tests/lean/import_invalid_tk.lean.expected.out
import_invalid_tk.lean:1:21: error: invalid binary digit
def buffer : Type u → Type u :=
λ (α : Type u), Σ (n : ℕ), array n α
